# sentinel-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  llms.txt  pyproject.toml  requirements.txt  sentinel.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
alerts/: __init__.py  discord_alert.py  email_alert.py  msteams_alert.py  pagerduty_alert.py  signal_alert.py  slack_alert.py  telegram_alert.py  whatsapp_alert.py
core/: __init__.py  agent.py  analyzer.py  collector.py  compliance.py  file_monitor.py  ollama_analyzer.py  remediation.py  scorer.py  telegram_bot.py  threat_intel.py
core/collectors/: aws_collector.py  azure_collector.py  gcp_collector.py  kubernetes_collector.py
dashboard/: __init__.py  app.py
dashboard/templates/: index.html
data/: remediation_audit.jsonl
docs/: ARCHITECTURE.md  AUTO_REMEDIATION.md  DEPLOY_VPS.md  FAQ.md  GRAFANA_SETUP.md  HELM_DEPLOY.md  MULTI_SERVER.md  SETUP_AWS.md  SETUP_AZURE.md  SETUP_DISCORD.md  SETUP_GCP.md  SETUP_KUBERNETES.md  SETUP_OLLAMA.md  SETUP_SLACK.md  SETUP_TELEGRAM.md  SETUP_THREAT_INTEL.md  SETUP_WHATSAPP.md  TELEGRAM_BOT_COMMANDS.md  THREAT_INTEL.md
helm/sentinel-ai/: Chart.yaml  README.md  values.yaml
mesh/: agent_node.py  coordinator.py
monitoring/: grafana_dashboard.json  prometheus_exporter.py
reports/: __init__.py  generator.py
tests/: conftest.py  test_alerts.py  test_collectors.py  test_compliance.py  test_remediation.py  test_report.py  test_scorer.py  test_threat_intel.py
(+6 files in other folders)
